--- a/frontend/index.html
+++ b/frontend/index.html
@@ -285,12 +285,7 @@
                             <div class="progress-fill" id="progressFill"></div>
                             <div class="progress-knob" id="progressKnob"></div>
                         </div>
-                        <div class="time-display"><span id="currentTime">0:00</span><span id="totalTime">--:--</span></div>
-                        <div style="display:flex; align-items:center; gap:.75rem; margin-top:.5rem;">
-                            <button id="playBtn" class="btn btn-secondary" style="padding:.5rem .9rem;">Play Preview</button>
-                            <input id="timeInput" type="text" inputmode="numeric" pattern="\\d{1,2}:\\d{2}" placeholder="mm:ss" style="width:90px; padding:.5rem .6rem; border:1px solid var(--slate-300); border-radius: var(--radius-md);">
-                            <button id="applyTimeBtn" class="btn" style="padding:.5rem .9rem; border:1px solid var(--slate-300);">Apply Time</button>
-                        </div>
+                        <div class="time-display"><span id="currentTime" title="Click to edit time">0:00</span><span id="totalTime">--:--</span></div>
                     </div>
                     <div class="status-box" id="statusBox">Enter a song to begin.</div>
                 </div>
@@ -405,10 +400,7 @@
         adminTrigger: get('admin-trigger'),
         adminModal: get('admin-modal'),
         adminPassword: get('admin-password'),
-        adminLoginBtn: get('admin-login-btn'),
-    playBtn: get('playBtn'),
-    timeInput: get('timeInput'),
-    applyTimeBtn: get('applyTimeBtn'),
+    adminLoginBtn: get('admin-login-btn'),
     };
 
     // --- State ---
@@ -418,7 +410,6 @@
     let lastPlaque = { meta: null, svg: null, query: null, progress: 0 };
     let cart = [];
     let isAdmin = false;
-    let audio = null; // HTMLAudioElement for preview playback
     const PLAQUE_PRICE = 29.99;
     const API_BASE = 'https://spotifyplaque.onrender.com/api';
     
@@ -491,20 +482,7 @@
             const meta = metaResponse.data;
             lastPlaque.meta = meta;
             lastPlaque.query = query;
-            // Setup audio preview if available
-            if (audio) { try { audio.pause(); } catch(_){} audio = null; }
-            if (meta.preview) {
-                audio = new Audio(meta.preview);
-                audio.addEventListener('timeupdate', () => {
-                    if (!isDragging) {
-                        // Keep UI in sync with preview playback but don't exceed known duration
-                        currentSec = Math.floor(audio.currentTime);
-                        if (trackDurationSec && currentSec > trackDurationSec) currentSec = trackDurationSec;
-                        updateProgressUI();
-                    }
-                });
-                audio.addEventListener('ended', () => { if (dom.playBtn) dom.playBtn.textContent = 'Play Preview'; });
-            }
+            // No audio playback; user will edit time directly
 
             if (meta.duration) {
                 const [m, s] = meta.duration.split(':').map(Number);
@@ -718,36 +696,46 @@
             }
         });
 
-        // Play/pause
-        if (dom.playBtn) dom.playBtn.addEventListener('click', async () => {
-            if (!audio) { alert('No preview available for this track.'); return; }
-            try {
-                if (audio.paused) {
-                    if (Math.abs(audio.currentTime - currentSec) > 0.25) audio.currentTime = currentSec;
-                    await audio.play();
-                    dom.playBtn.textContent = 'Pause';
-                } else {
-                    audio.pause();
-                    dom.playBtn.textContent = 'Play Preview';
-                }
-            } catch (e) {
-                console.error(e);
-                alert('Unable to play preview.');
-            }
-        });
+        // Click-to-edit current time inline
+        dom.currentTime.addEventListener('click', () => {
+            // Replace the span with an input for inline editing
+            const parent = dom.currentTime.parentElement;
+            const input = document.createElement('input');
+            input.type = 'text';
+            input.value = dom.currentTime.textContent.trim();
+            input.placeholder = 'mm:ss';
+            input.style.width = '70px';
+            input.style.padding = '2px 6px';
+            input.style.fontFamily = 'monospace';
+            input.style.border = '1px solid var(--slate-300)';
+            input.style.borderRadius = '6px';
+            parent.replaceChild(input, dom.currentTime);
 
-        // Manual time input
-        if (dom.applyTimeBtn) dom.applyTimeBtn.addEventListener('click', () => {
-            const val = (dom.timeInput?.value || '').trim();
-            const m = val.match(/^(\d{1,2}):(\d{2})$/);
-            if (!m) { alert('Enter time as mm:ss'); return; }
-            const mm = parseInt(m[1], 10), ss = parseInt(m[2], 10);
-            const sec = mm * 60 + ss;
-            if (isNaN(sec)) return;
-            currentSec = Math.max(0, Math.min(trackDurationSec || sec, sec));
-            if (audio) { try { audio.currentTime = currentSec; } catch(_){} }
-            updateProgressUI();
-            designPlaque();
+            const commit = () => {
+                const val = (input.value || '').trim();
+                const m = val.match(/^(\d{1,2}):(\d{2})$/);
+                const span = document.createElement('span');
+                span.id = 'currentTime';
+                if (!m) {
+                    span.textContent = formatTime(currentSec);
+                    parent.replaceChild(span, input);
+                    dom.currentTime = span;
+                    return;
+                }
+                const mm = parseInt(m[1], 10), ss = parseInt(m[2], 10);
+                const sec = mm * 60 + ss;
+                currentSec = Math.max(0, Math.min(trackDurationSec || sec, sec));
+                span.textContent = formatTime(currentSec);
+                parent.replaceChild(span, input);
+                dom.currentTime = span;
+                updateProgressUI();
+                designPlaque();
+            };
+
+            input.addEventListener('blur', commit);
+            input.addEventListener('keydown', (e) => { if (e.key === 'Enter') commit(); if (e.key === 'Escape') input.blur(); });
+            input.focus();
+            input.select();
         });
 
         // Cart
